--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,22 @@ jobs:
             - v1-dependencies-
 
       - run: npm install
+     - run:
+          name: Deploy Master to Firebase
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN
 
+workflows:
+  version: 2
+  deploy:
+    jobs:
+      - build-job
+      - deploy-job:
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
+ 
       - save_cache:
           paths:
             - node_modules
